--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.2",
+    "express": "^4.18.2",
+    "stripe": "^14.13.0"
   }
 }
